# robot

./: .gitignore  README.md  compile.sh  gui_host.sh  motor_test.py  serial_read.py  upload_py.sh
3dprint/: крепёж DC-DC.FCStd  крепёж TB6612FNG.FCStd  крепёж charger.FCStd  крепёж powerbank.FCStd  крепёж аккум.FCStd  крепёж заднего колеса.FCStd  крепёж колеса.FCStd  пластина управления питанием.FCStd  стойка 65мм.FCStd
3dprint/STL/: крепёж аккум-Body.stl
Motors/: Motors.ino  compile.sh  test_motors.py  test_odometry.py  upload_motors.sh
Motors/OdomTest/: OdomTest.ino  compile.sh
ROS2/: DOCKER_README.md  Dockerfile.base  PACKAGES_SUMMARY.md  README.md  build_on_robot.sh  diagnose_packages.sh  docker-compose.discovery.yml  docker-compose.robot.yml  docker-compose.yml  docker-run.sh  env.example  fix_dds_errors.sh  install_packages.sh  requirements.txt  run_robot.sh  test_integration.py  test_package.sh  upload_and_build_packages.sh  upload_packages.sh
ROS2/lds01rr_lidar_ros2/: DRIVER_COMPARISON.md  Dockerfile  LICENSE  README.md  entrypoint.sh  install.sh  package.xml  setup.cfg  setup.py  test_driver.py
ROS2/lds01rr_lidar_ros2/config/: lidar_params.yaml
ROS2/lds01rr_lidar_ros2/launch/: lds01rr_v2.launch.py  lidar_launch.py
ROS2/lds01rr_lidar_ros2/lds01rr_lidar_ros2/: LDS.c  LDS.h  checksum.py  lds01rr_driver.py  lds01rr_driver_v2.py  lds01rr_node_v2.py  lidar_node.py
ROS2/robot_bringup/: README.md  package.xml  setup.py
ROS2/robot_bringup/launch/: robot.launch.py
ROS2/robot_bringup/robot_bringup/: __init__.py
ROS2/robot_lidar/: .dockerignore  Dockerfile  entrypoint.sh  install.sh  package.xml  requirements.txt  setup.cfg  setup.py  test_driver.py
ROS2/robot_lidar/config/: lidar_params.yaml
ROS2/robot_lidar/launch/: lidar_launch.py
ROS2/robot_lidar/robot_lidar/: lds01rr_driver_v2.py  lidar_node.py  test_driver_v2.py
ROS2/robot_odometry/: Dockerfile  README.md  fastdds_config.xml  package.xml  setup.py
ROS2/robot_odometry/config/: odometry_params.yaml
ROS2/robot_odometry/launch/: odometry.launch.py
ROS2/robot_odometry/robot_odometry/: odometry_node.py
ROS2/robot_odometry/scripts/: odometry_node
ROS2/robot_sonar/: Dockerfile  README.md  package.xml  setup.py
ROS2/robot_sonar/config/: sonar_params.yaml
ROS2/robot_sonar/launch/: sonar.launch.py
ROS2/robot_sonar/resource/: robot_sonar
ROS2/robot_sonar/robot_sonar/: sonar_node.py
ROS2/robot_sonar/scripts/: sonar_node
ROS2/robot_teleop/: Dockerfile  README.md  package.xml  setup.py
ROS2/robot_teleop/config/: teleop_params.yaml
ROS2/robot_teleop/launch/: teleop.launch.py
ROS2/robot_teleop/robot_teleop/: teleop_node.py
ROS2/robot_teleop/scripts/: teleop_node
Sensors/: Sensors.ino  compile.sh  test_sensors.py  upload_sensors.sh
docs/: scheme.spl7
docs/LDS01RR/SDK & test software/: README.MD
