<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelang="xml"?>
<package format="3">
  <name>robot_bringup</name>
  <version>1.0.0</version>
  <description>ROS2 пакет для запуска всех компонентов робота</description>
  <maintainer email="seko@example.com">seko</maintainer>
  <license>MIT</license>

  <depend>robot_odometry</depend>
  <depend>robot_teleop</depend>
  <depend>robot_sonar</depend>
  <depend>lds01rr_lidar_ros2</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
